# kunitconversion

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5UnitConversionConfig.cmake.in  KF6UnitConversionConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  categorytest.cpp  categorytest.h  convertertest.cpp  convertertest.h  currencytableinittest.cpp  valuetest.cpp  valuetest.h
autotests/currencytableinittest/: currency.xml
po/ar/: kunitconversion5.po  kunitconversion6.po
po/ast/: kunitconversion5.po  kunitconversion6.po
po/az/: kunitconversion5.po  kunitconversion6.po
po/bg/: kunitconversion5.po  kunitconversion6.po
po/bs/: kunitconversion5.po  kunitconversion6.po
po/ca/: kunitconversion5.po  kunitconversion6.po
po/ca@valencia/: kunitconversion5.po  kunitconversion6.po
po/cs/: kunitconversion5.po  kunitconversion6.po
po/da/: kunitconversion5.po  kunitconversion6.po
po/de/: kunitconversion5.po  kunitconversion6.po
po/el/: kunitconversion5.po  kunitconversion6.po
po/en_GB/: kunitconversion5.po  kunitconversion6.po
po/eo/: kunitconversion5.po  kunitconversion6.po
po/es/: kunitconversion5.po  kunitconversion6.po
po/et/: kunitconversion5.po  kunitconversion6.po
po/eu/: kunitconversion5.po  kunitconversion6.po
po/fi/: kunitconversion5.po  kunitconversion6.po
po/fr/: kunitconversion5.po  kunitconversion6.po
po/ga/: kunitconversion5.po  kunitconversion6.po
po/gd/: kunitconversion5.po  kunitconversion6.po
po/gl/: kunitconversion5.po  kunitconversion6.po
po/hi/: kunitconversion6.po
po/hr/: kunitconversion5.po  kunitconversion6.po
po/hu/: kunitconversion5.po  kunitconversion6.po
po/ia/: kunitconversion5.po  kunitconversion6.po
po/id/: kunitconversion5.po  kunitconversion6.po
po/is/: kunitconversion5.po  kunitconversion6.po
po/it/: kunitconversion5.po  kunitconversion6.po
po/ja/: kunitconversion5.po  kunitconversion6.po
po/ka/: kunitconversion5.po  kunitconversion6.po
po/kk/: kunitconversion5.po  kunitconversion6.po
po/ko/: kunitconversion5.po  kunitconversion6.po
po/lo/: kunitconversion6.po
po/lt/: kunitconversion5.po  kunitconversion6.po
po/lv/: kunitconversion5.po  kunitconversion6.po
po/ml/: kunitconversion5.po  kunitconversion6.po
po/mr/: kunitconversion5.po  kunitconversion6.po
po/ms/: kunitconversion5.po  kunitconversion6.po
po/nb/: kunitconversion5.po  kunitconversion6.po
po/nds/: kunitconversion5.po  kunitconversion6.po
po/nl/: kunitconversion5.po  kunitconversion6.po
po/nn/: kunitconversion5.po  kunitconversion6.po
po/pa/: kunitconversion5.po  kunitconversion6.po
po/pl/: kunitconversion5.po  kunitconversion6.po
po/pt/: kunitconversion5.po  kunitconversion6.po
po/pt_BR/: kunitconversion5.po  kunitconversion6.po
po/ro/: kunitconversion5.po  kunitconversion6.po
po/ru/: kunitconversion5.po  kunitconversion6.po
po/sa/: kunitconversion6.po
po/se/: kunitconversion5.po  kunitconversion6.po
po/sk/: kunitconversion5.po  kunitconversion6.po
po/sl/: kunitconversion5.po  kunitconversion6.po
po/sr/: kunitconversion5.po  kunitconversion6.po
po/sr@ijekavian/: kunitconversion5.po  kunitconversion6.po
po/sr@ijekavianlatin/: kunitconversion5.po  kunitconversion6.po
po/sr@latin/: kunitconversion5.po  kunitconversion6.po
po/sv/: kunitconversion5.po  kunitconversion6.po
po/ta/: kunitconversion5.po  kunitconversion6.po
po/tg/: kunitconversion5.po  kunitconversion6.po
po/th/: kunitconversion5.po  kunitconversion6.po
po/tr/: kunitconversion5.po  kunitconversion6.po
po/ug/: kunitconversion5.po  kunitconversion6.po
po/uk/: kunitconversion5.po  kunitconversion6.po
po/x-test/: kunitconversion5.po
po/zh_CN/: kunitconversion5.po  kunitconversion6.po
po/zh_TW/: kunitconversion5.po  kunitconversion6.po
python/: CMakeLists.txt  bindings.h  bindings.xml  pyproject.toml
src/: CMakeLists.txt  Messages.sh  acceleration.cpp  acceleration_p.h  angle.cpp  angle_p.h  area.cpp  area_p.h  binary_data.cpp  binary_data_p.h  converter.cpp  converter.h  currency.cpp  currency.h  currency_p.h  density.cpp  density.h  density_p.h  electrical_current.cpp  electrical_current_p.h  electrical_resistance.cpp  electrical_resistance_p.h  energy.cpp  energy_p.h  force.cpp  force_p.h  frequency.cpp  frequency_p.h  fuel_efficiency.cpp  fuel_efficiency_p.h  kcurrencycode.cpp  kcurrencycode.h  kunitconversion-index.qdoc  kunitconversion.qdoc  kunitconversion.qdocconf  length.cpp  length_p.h  mass.cpp  mass_p.h  permeability.cpp  (+30 more)
src/currency/: CMakeLists.txt  adf.desktop  adp.desktop  aed.desktop  afa.desktop  afn.desktop  all.desktop  amd.desktop  ang.desktop  aoa.desktop  aon.desktop  ars.desktop  ats.desktop  aud.desktop  awg.desktop  azm.desktop  azn.desktop  bam.desktop  bbd.desktop  bdt.desktop  bef.desktop  bgl.desktop  bgn.desktop  bhd.desktop  bif.desktop  bmd.desktop  bnd.desktop  bob.desktop  bov.desktop  brl.desktop  bsd.desktop  btn.desktop  bwp.desktop  byr.desktop  bzd.desktop  cad.desktop  cdf.desktop  chf.desktop  clf.desktop  clp.desktop  (+167 more)
