# SPDX-FileCopyrightText: 2024 Manuel Alcaraz Zambrano <manuelalcarazzam@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[project]
name = "KUnitConversion"
version = "0.0.1"
authors = [
    { name="Manuel Alcaraz Zambrano" },
]
description = "Python bindings for KDE Frameworks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7.0,<7",
]
classifiers = [
    "Development Status :: 1 - Planning",

    "Operating System :: POSIX :: Linux",

    # TODO: license

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://invent.kde.org/manuelal/pykde6"
Issues = "https://invent.kde.org/manuelal/pykde6/-/issues"
